# PYOPATRA

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.rst  antora-playbook.yml  codecov.yml  setup.py
.github/workflows/: build-docker.yml  codeql-analysis.yml  continuous-integration.yml  hpc-tests.yml  unit-tests.yml
dockerfiles/: Dockerfile  Dockerfile-knl-mvapich-psm2  Dockerfile-mvapich-ib  Dockerfile-mvapich-psm2  Dockerfile-mvapich231-ib  Dockerfile-mvapich2_3-ib  Dockerfile-sandybridge-mvapich-ib  Dockerfile-sandybridge-mvapich2_3-ib  GH_actions_build_docker.sh  travis_build_docker.sh
docs/: antora.yml  conf.py  index.rst  requirements.txt
docs/ROOT/pages/: index.adoc
docs/howto/: api.rst  contributing.rst  index.rst  installing.rst  using.rst
docs/mesh/: adcirc.rst  hycom.rst  index.rst  mitgcm.rst  pom.rst
docs/physics/: buoyancy.rst  droplet_shapes.rst  index.rst  lpt.rst  oil_transport_factors.rst
examples/HYCOM_deepwater_horizon/: HYCOM_experiment.py  HYCOM_fwd_pictures.ipynb  HYCOM_inversion_experiment.py  HYCOM_inversion_pictures.ipynb  HYCOM_pictures.ipynb  HYCOM_sliced_wasserstein_investigation.py  combine_hycom_data.py  pull_hycom_data.py  sliced_wasserstein.ipynb
examples/HYCOM_deepwater_horizon/data/: README.md
src/PYOPATRA/: __init__.py  file_parsing.py  mesh.py  mesh_vertex.py  objective_functions.py  particle.py  solver.py
src/PYOPATRA/cpp/: bindings.cpp  coordinate.h  illnode.h  illnode.inl  list.h  list.inl  mesh.cpp  mesh.h  mesh_node.cpp  mesh_node.h  particle.cpp  particle.h  particle_list.h  particlelist.h  particlenode.cpp  particlenode.h  particlesolver.cpp  particlesolver.h  pyopatra_random.h  solver.h  util.h
src/PYOPATRA/cpp/inversion_tools/: objective_functions.h
src/PYOPATRA/cpp/mesh/: mesh.h  mesh_base.cpp  mesh_base.h  mesh_element.cpp  mesh_element.h  mesh_element.inl  mesh_vertex.cpp  mesh_vertex.h  mesh_vertex.inl  mesh_water_column.cpp  mesh_water_column.h  mesh_water_column.inl  triangular_mesh.cpp  triangular_mesh.h  velocity.h
src/pythonLPT/cpp/: bindings.cpp  coordinate.h  library.h  mesh.cpp  mesh.h  particle.cpp  particle.h  particlelist.cpp  particlelist.h  particlesolver.h
test/: test_base.cpp  test_ill.cpp  test_mesh.cpp  test_mesh_element.cpp  test_mesh_vertex.cpp  test_particle.cpp  unit_test_setup.ipynb
test/cpp_tests/: test_base.cpp  test_coordinate.cpp  test_ill.cpp  test_mesh.cpp  test_mesh_element.cpp  test_mesh_vertex.cpp  test_obj_function.cpp  test_particle.cpp
test/hpc_tests/hycom/: run.py  setup.py
test/hpc_tests/mohid/: config.yaml  run.py
test/python_tests/: file_reading_test.py  fort.14  test_file_parsing.py  test_mesh.py  test_mesh_vertex.py  testfile.py
